2008-04-26  Ludovic Courtès  <ludo@gnu.org>

	* srfi-35.scm: Provide `srfi-35' through `cond-expand-provide'.

2008-04-26  Ludovic Courtès  <ludo@gnu.org>

	* Makefile.am (srfi_DATA): Add `srfi-88.scm'.
	* srfi-88.scm: New file.

2008-03-12  Ludovic Courtès  <ludo@gnu.org>

	* srfi-37.scm (args-fold)[short-option]: Set ARGS to `(cdr
	args)' before calling `next-arg'.  This fixes parsing of
	argument-less options when using short names.

2008-01-22  Neil Jerram  <neil@ossau.uklinux.net>

	* srfi-39.scm: Update copyright statement to LGPL.

2007-12-13  Stephen Compall  <s11@member.fsf.org>

	* srfi-69.scm (without-keyword-args): Use `cdr' instead of
	`rest'.

2007-12-03  Stephen Compall  <s11@member.fsf.org>

	* srfi-69.scm: New file.
	* Makefile.am: Add it.

2007-09-10  Ludovic Courtès  <ludo@gnu.org>

	* srfi-35.scm (make-compound-condition-type): When PARENTS
	contains only one element, return its car.  This improves the
	output of `print-condition' for non-compound conditions returned
	by `make-compound-condition'.

2007-08-11  Ludovic Courtès  <ludo@gnu.org>

	* srfi-35.scm: New file.
	* Makefile.am (srfi_DATA): Added `srfi-35.scm'.

2007-07-18  Stephen Compall  <s11@member.fsf.org>

	* srfi-37.scm: New file.
	* Makefile.am: Add it.

2007-07-09  Ludovic Courtès  <ludo@gnu.org>

	* srfi-19.scm (date->julian-day): Take OFFSET into account.
	Patch by Jon Wilson <j85wilson@fastmail.fm>.

2007-05-09  Ludovic Courtès  <ludo@chbouib.org>

	* srfi-19.scm (priv:current-time-process): Removed shadowing
	definition that returned a list.  Use the right argument order to
	`make-time'.  Reported by Scott Shedden.

2006-12-02  Kevin Ryde  <user42@zip.com.au>

	* srfi-60.c (scm_srfi60_copy_bit): Should be long not int for fixnum
	bitshift, fixes 64-bit systems setting a bit between 32 and 63.
	Reported by Aaron M. Ucko, Debian bug 396119.

2006-05-28  Kevin Ryde  <user42@zip.com.au>

	* srfi-1.scm, srfi-1.c, srfi-1.h (append-reverse, append-reverse!):
	Rewrite in C.
